--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -1,10 +1,13 @@
-/* app css stylesheet */
-
 body {
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
+
+    width: 100%; height: 100%;
+    margin: 0; padding: 0;
+    position: absolute; left: 0; top: 0;
     }
 
+/*
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
@@ -33,3 +36,18 @@ body {
   content: "";
   padding: 0;
 }
+*/
+
+
+
+.table-container {
+    display: table;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    }
+
+.table-cell {
+    display: table-cell;
+    vertical-align: middle;
+    }
