--- a/frontend/app/css/animations.css
+++ b/frontend/app/css/animations.css
@@ -3,17 +3,28 @@
  */
 
 .spinner {
-  /* margin: 100px auto 0; */
     margin-left: auto;
     margin-right: auto;
-    width: 70px;
+    width: 140px;
+    height: 200px;
     text-align: center;
+    background-color: #000;
+    border-radius: 0 0 10px 10px;
+    /* padding-left: 20px;
+    padding-top: 20px; */
     }
 
-.spinner > div {
-  width: 18px;
-  height: 18px;
-  background-color: #333;
+.spinner .container {
+    display: block;
+    width: 100%; height: 20px;
+    margin-top: 15px;
+    }
+
+.spinner div {
+  width: 20px;
+  height: 20px;
+  /* background-color: #333; */
+    background-color: rgb(254, 254, 254);
 
   border-radius: 100%;
   display: inline-block;
