--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -1,10 +1,19 @@
+/* * {
+    cursor: none !important;
+    } */
+
 body {
     color: black;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(0, 0, 0); */
 
     width: 100%; height: 100%;
     margin: 0; padding: 0;
     position: absolute; left: 0; top: 0;
+
+    -webkit-transform: translate3d(0, 0, 0);
+	-webkit-backface-visibility: hidden;
+	-webkit-perspective: 1000;
     }
 
 #app-logo {
@@ -25,41 +34,8 @@ body {
     margin-right: auto;
 }
 
-/*
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
-}
-
-.menu:before {
-  content: "[";
-}
-
-.menu:after {
-  content: "]";
-}
-
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
-}
-*/
 
 
-* {
-    cursor: none !important;
-    }
 
 
 .table-container {
