--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -3,9 +3,9 @@
     } */
 
 body {
-    color: black;
-    background-color: rgb(255, 255, 255);
-    /* background-color: rgb(0, 0, 0); */
+    color: white;
+    /* background-color: rgb(255, 255, 255); */
+    background-color: rgb(0, 0, 0);
 
     width: 100%; height: 100%;
     margin: 0; padding: 0;
