--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -2,22 +2,204 @@
     cursor: none !important;
     } */
 
-body {
-    color: white;
-    /* background-color: rgb(255, 255, 255); */
-    background-color: rgb(0, 0, 0);
 
-    width: 100%; height: 100%;
+body, html {
+  margin: 0;
+  overflow: hidden;
+  -webkit-transition: opacity 400ms;
+  -moz-transition: opacity 400ms;
+  transition: opacity 400ms;
+}
+
+body, .onepage-wrapper, html {
+  display: block;
+  position: static;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.onepage-wrapper {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: relative;
+  padding: 0;
+  -webkit-transform-style: preserve-3d;
+}
+
+.onepage-wrapper .ops-section {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.onepage-pagination {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  z-index: 5;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.onepage-pagination li {
+  padding: 0;
+  text-align: center;
+}
+.onepage-pagination li a{
+  padding: 10px;
+  width: 4px;
+  height: 4px;
+  display: block;
+
+}
+.onepage-pagination li a:before{
+  content: '';
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  background: rgba(0,0,0,0.85);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+}
+
+.onepage-pagination li a.active:before{
+  width: 10px;
+  height: 10px;
+  background: none;
+  border: 1px solid black;
+  margin-top: -4px;
+  left: 8px;
+}
+
+.disabled-onepage-scroll, .disabled-onepage-scroll .wrapper {
+  overflow: auto;
+}
+
+.disabled-onepage-scroll .onepage-wrapper .ops-section {
+  position: relative !important;
+  top: auto !important;
+}
+.disabled-onepage-scroll .onepage-wrapper {
+  -webkit-transform: none !important;
+  -moz-transform: none !important;
+  transform: none !important;
+  -ms-transform: none !important;
+  min-height: 100%;
+}
+
+
+.disabled-onepage-scroll .onepage-pagination {
+  display: none;
+}
+
+body.disabled-onepage-scroll, .disabled-onepage-scroll .onepage-wrapper, html {
+  position: inherit;
+}
+
+
+
+
+
+html {
+      height: 100%;
+    }
+    body {
+      background: black;
+      padding: 0;
+      text-align: center;
+      font-family: 'open sans';
+      position: relative;
+      margin: 0;
+      height: 100%;
+      -webkit-font-smoothing: antialiased;
+    }
+
+    #wrapper {
+    	height: 100% !important;
+    	height: 100%;
+    	margin: 0 auto;
+    	overflow: hidden;
+    }
+
+
+#content {
+    float: left;
+width: 100%;
+margin: 0 auto;
+    }
+
+
+
+
+
+
+
+
+/*
+
+body, html {
     margin: 0; padding: 0;
-    position: absolute; left: 0; top: 0;
+    overflow: hidden;
+    display: block;
+    position: static;
+    width: 100%; height: 100%;
+    }
+*/
 
+
+/* body {
+    color: white;
+
+    background-color: rgb(0, 0, 0); */
+
+    /* width: 100%; height: 100%;
+    margin: 0; padding: 0;
+    position: absolute; left: 0; top: 0; */
+
+    /*
     -webkit-transform: translate3d(0, 0, 0);
 	-webkit-backface-visibility: hidden;
 	-webkit-perspective: 1000;
+    } */
+
+/*
+html {
+      height: 100%;
+    }
+    */
+
+/* body { */
+      /* background: #E2E4E7;
+      padding: 0;
+      text-align: center;
+      font-family: 'open sans'; */
+      /* position: relative;
+      margin: 0;
+      height: 100%; */
+      /* -webkit-font-smoothing: antialiased; */
+    /* } */
+/*
+#wrapper {
+    	height: 100% !important;
+    	margin: 0 auto;
+    	overflow: hidden;
     }
 
+#content {
+    float: left;
+    width: 100%; height: 100%;
+    margin: 0 auto;
+    display: block;
+    padding: 0;
+    -webkit-transform-style: preserve-3d;
+    }
+*/
 .boom-movie-grid-page {
-    height: 100%;
+    /* height: 100%; */
+    overflow: hidden;
     }
 
 .boom-movie-grid-table {
@@ -32,12 +214,15 @@ body {
     width: 320px;
     }
 
+
+/*
+
 #app-logo {
     width: 100px;
     height: 100px;
     display: block;
     margin: 0 auto 16px auto;
-    /* padding-left: 20px; */
+
     padding-top: 20px;
     }
 
@@ -65,3 +250,4 @@ body {
     display: table-cell;
     vertical-align: middle;
     }
+*/
