--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -1,160 +1,29 @@
+/**
+ *  Main application styles.
+ *
+ *  @author Nikola Klaric (nikola@generic.company)
+ *  @copyright Copyright (c) 2013-2014 Nikola Klaric
+ */
+
 * {
     cursor: none !important;
     }
 
-body, html {
-    display: block;
-    position: static;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    overflow: hidden;
-    -webkit-transition: opacity 400ms;
-}
-
-.onepage-wrapper {
-  width: 100%;
-  height: 100%;
-  display: block;
-  position: relative;
-  padding: 0;
-  -webkit-transform-style: preserve-3d;
-}
-
-.onepage-wrapper .ops-section {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
 body {
-        color: white;
-      background: black;
-      padding: 0;
-      text-align: center;
-      font-family: 'Ka Boom'; /* , Frutiger, 'Frutiger Linotype', 'Dejavu Sans', 'Helvetica Neue', Arial, sans-serif; */
-      position: relative;
-      margin: 0;
-      height: 100%;
-      /* -webkit-font-smoothing: antialiased; */
-    }
-
-#wrapper {
-    height: 100% !important;
-    height: 100%;
-    margin: 0 auto;
+    color: white;
+    background: black;
+    margin: 0; padding: 0;
     overflow: hidden;
+    font-family: 'Ka Boom', sans-serif;
     }
 
 #content {
-    float: left;
-    width: 100%;
-    margin: 0 auto;
+    width: 1920px; height: 1080px;
     -webkit-transition: -webkit-transform 720ms ease;
-
-
-  height: 100%;
-  display: block;
-  position: relative;
-  padding: 0;
-  -webkit-transform-style: preserve-3d;
-
-
+    -webkit-transform-style: preserve-3d;
     }
 
 
-
-
-
-
-
-.boom-movie-grid-page {
-    /* height: 100%; */
-    overflow: hidden;
-    font-size: 0;
-    /* padding-top: 30px; */
-
-      width: 100%;
-  height: 100%;
-  position: relative;
-
-
-    }
-
-.boom-movie-grid-letter-indicator {
-    display: inline-block;
-    width: 100px;
-    border-collapse: collapse;
-    }
-
-.boom-movie-grid-letter-cell {
-    padding: 0;
-    }
-
-.boom-movie-grid-letter-indicator-text {
-    display: inline-block;
-    margin-top: 30px;
-    width: 64px;
-    font-size: 32px;
-    margin-left: 28px;
-    text-align: center;
-    color: #aaa;
-    border: 2px solid #aaa;
-    height: 48px;
-    line-height: 46px;
-    border-radius: 0 0 8px 8px;
-    }
-
-.boom-movie-grid-table {
-    display: inline-block;
-    width: 1820px;
-    border-collapse: collapse;
-    /* margin-top: 30px; */
-
-    /* background-color: darkgreen; */
-    }
-
-.boom-movie-grid-line {
-    height: 360px;
-    /*
-    1080
-      30 top
-      30 bottom
-    1020
-      30 between
-      30 between
-     960 = 3 x 320
-
-     30 margin
-
-     30 margin
-    */
-
-    /* background-color: brown; */
-    }
-
-/* .boom-movie-grid-line:first-child {
-    border-top: 1px solid #888;
-    } */
-
-.boom-movie-grid-item {
-    padding: 0;
-    width: 260px;
-
-    /* background-color: navy; */
-    }
-
-.boom-movie-grid-item img {
-    /* border: 0px solid transparent;
-    box-sizing: content-box;
-    padding: 6px; */
-    }
-
-.boom-movie-grid-item-title {
-    text-align: center;
-    display: block;
-}
 
 /*
 
