--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -11,16 +11,26 @@
 
 body {
     color: white;
-    background: black;
+    background-color: black;
+
     margin: 0; padding: 0;
     overflow: hidden;
     font-family: 'Ka Boom', sans-serif;
+
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+	-webkit-perspective: 1000;
     }
 
 #content {
     width: 1920px; height: 1080px;
+
+    position: absolute; top: 0; left: 0;
+
     -webkit-transition: -webkit-transform 720ms ease;
     -webkit-transform-style: preserve-3d;
+
+    background-color: black;
     }
 
 
