--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -23,6 +23,8 @@ body {
     }
 
 #content {
+    margin-left: 100px;
+
     width: 1920px; height: 1080px;
 
     position: absolute; top: 0; left: 0;
