--- a/frontend/app/css/grid.css
+++ b/frontend/app/css/grid.css
@@ -96,8 +96,11 @@
 
 .boom-movie-grid-item {
     padding: 0;
-    width: 260px;
+    width: 260px; height: 300px;
     text-align: center;
+    display: inline; float: left;
+    margin: 30px 0;
+    /* margin-top: 30px; margin-bottom: 30px; */
 
     background-color: black;
     /* background-color: navy; */
