--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -47,20 +47,20 @@
     width: auto;
     height: auto;
 
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3);
+    /* box-shadow: inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3); */
     }
 
-#boom-movie-detail-play-button {
+#boom-movie-detail-play-button, #boom-movie-detail-audio-button, #boom-movie-detail-details-button {
     margin: 30px 0 0 -2px;
     width: 300px;
     height: 45px;
     border: 1px solid rgba(0,0,0,0.5);
     border-radius: 2px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.5),
-                inset 1px 1px rgba(255,255,255,0.2),
-                inset 0 1px rgba(255,255,255,0.2),
-                inset 0 10px 20px rgba(255,255,255,0.25),
-                inset 0 -15px 30px rgba(0,0,0,0.3);
+    box-shadow: 0 2px 6px rgba(0, 0 , 0, 0.5),
+                inset 1px 1px rgba(255, 255, 255, 0.2),
+                inset 0 1px rgba(255, 255, 255, 0.2),
+                inset 0 10px 20px rgba(255, 255, 255, 0.25),
+                inset 0 0px 4px rgba(255, 255, 255, 0.3);
     background: rgba(0,0,0,0.25);
     text-align: center;
     font-size: 30px;
@@ -78,12 +78,12 @@
 
 #boom-movie-detail-title {
     height: 40px;
-    font: 30px/40px Ka Boom;
+    font: 30px/35px Ka Boom;
     /* text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.75); */
     -webkit-transform-origin: 0 0;
     -webkit-transform: rotate(90deg);
     width: 1080px;
-    padding-left: 10px;
+    padding-left: 30px;
     background-color: black;
     }
     /* -webkit-text-stroke: 0.75px rgba(0, 0, 0, 0.25); */
