--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -14,16 +14,15 @@
 
     background-size: cover;
     background-position-x: 160px;
-
+    background-repeat: no-repeat;
     /* padding: 30px; */
     }
 
 #boom-movie-detail-shade {
-    display: none;
-    width: 1920px; height: 1080px;
-    background-color: rgba(0, 0, 0, 0.5);
-    /* position: absolute; */
-    margin: -30px 0 0 -30px;
+    /* display: none; */
+    width: 1520px; height: 1080px;
+    background-color: black; opacity: 0;
+    margin: 0 0 0 360px;
     z-index: 0;
     }
 
@@ -42,30 +41,40 @@
 
 #boom-movie-detail-poster img {
     display: block;
-    max-width: 300px;
-    max-height: 450px;
+    min-width: 300px; max-width: 300px;
+    min-height: 450px; max-height: 450px;
     width: auto;
     height: auto;
 
     /* box-shadow: inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3); */
     }
 
-#boom-movie-detail-play-button, #boom-movie-detail-audio-button, #boom-movie-detail-details-button {
+.boom-detail-button {
+    color: rgb(128, 128, 128);
+    /* background: rgba(0, 0, 0, 0.25); */
+
     margin: 30px 0 0 -2px;
     width: 300px;
     height: 45px;
-    border: 1px solid rgba(0,0,0,0.5);
+    border: 1px solid rgba(0, 0, 0, 0.5);
     border-radius: 2px;
+
+    text-align: center;
+    font-size: 30px;
+    line-height: 45px;
+    letter-spacing: 4px;
+    }
+
+.boom-detail-button.boom-active {
+    /* position: absolute; top: 510px; left: 28px;
+    width: 302px; height: 45px; */
+
+    color: white;
     box-shadow: 0 2px 6px rgba(0, 0 , 0, 0.5),
                 inset 1px 1px rgba(255, 255, 255, 0.2),
                 inset 0 1px rgba(255, 255, 255, 0.2),
                 inset 0 10px 20px rgba(255, 255, 255, 0.25),
                 inset 0 0px 4px rgba(255, 255, 255, 0.3);
-    background: rgba(0,0,0,0.25);
-    text-align: center;
-    font-size: 30px;
-    line-height: 45px;
-    letter-spacing: 4px;
     }
 
 #boom-movie-detail-right {
@@ -91,8 +100,17 @@
 
 #boom-movie-detail-description {
     display: none;
-    font-size: 30px;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.75);
-    width: 1200px;
-    text-align: justify;
+
+    position: absolute; left: 360px; top: 0px;
+
+    font-size: 40px;
+    line-height: 60px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
+    width: 1472px; height: 1080px;
+    /* text-align: justify; */
+    font-weight: bold;
+    padding: 18px 0 0 24px;
+
+    flex-direction: column;
+    justify-content: center;
     }
