--- a/frontend/app/css/buttons.css
+++ b/frontend/app/css/buttons.css
@@ -25,10 +25,21 @@
     /* position: absolute; top: 510px; left: 28px;
     width: 302px; height: 45px; */
 
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
+
     color: white;
     box-shadow: 0 2px 6px rgba(0, 0 , 0, 0.5),
                 inset 1px 1px rgba(255, 255, 255, 0.2),
                 inset 0 1px rgba(255, 255, 255, 0.2),
                 inset 0 10px 20px rgba(255, 255, 255, 0.25),
                 inset 0 0px 4px rgba(255, 255, 255, 0.3);
+    }
+
+.boom-align-left {
+    text-align: left;
+    padding-left: 12px;
+    }
+
+.boom-button-wide {
+    width: 720px;
     }
