--- a/frontend/app/css/grid.css
+++ b/frontend/app/css/grid.css
@@ -62,12 +62,20 @@
     }
 */
 
-.boom-movie-grid-letter-indicator-text {
+.boom-movie-grid-key {
+    width: 110px; height: 360px;
+    padding: 0;
+    margin-right: -10px;
+    display: inline;
+    float: left;
+    text-align: center;
+    }
+
+.boom-movie-grid-key-label {
     display: inline-block;
     margin-top: 30px;
     min-width: 44px;
     font-size: 32px;
-    /* margin-left: 28px; */
     text-align: center;
     color: #aaa;
     border: 2px solid #aaa;
