--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -25,7 +25,7 @@ body {
 
     visibility: hidden;
 
-    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform: translateZ(0);
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
     }
