--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -1,5 +1,5 @@
 /**
- *  Main application styles.
+ *  Application base styles.
  *
  *  @author Nikola Klaric (nikola@generic.company)
  *  @copyright Copyright (c) 2013-2014 Nikola Klaric
@@ -16,6 +16,7 @@ body {
     margin: 0; padding: 0;
     overflow: hidden;
     font-family: 'Ka Boom', sans-serif;
+    width: 100%; height: 100%;
     }
 
 #content {
@@ -23,88 +24,7 @@ body {
 
     background-color: black;
 
-    visibility: hidden;
-
     -webkit-transform: translateZ(0);
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
     }
-
-.spinner {
-  width: 40px;
-  height: 40px;
-
-  position: relative;
-  margin: 100px auto;
-}
-
-.double-bounce1, .double-bounce2 {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: #fff;
-  opacity: 0.6;
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  -webkit-animation: bounce 2.0s infinite ease-in-out;
-  animation: bounce 2.0s infinite ease-in-out;
-}
-
-.double-bounce2 {
-  -webkit-animation-delay: -1.0s;
-  animation-delay: -1.0s;
-}
-
-@-webkit-keyframes bounce {
-  0%, 100% { -webkit-transform: scale(0.0) }
-  50% { -webkit-transform: scale(1.0) }
-}
-
-@keyframes bounce {
-  0%, 100% {
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
-  } 50% {
-    transform: scale(1.0);
-    -webkit-transform: scale(1.0);
-  }
-}
-
-/*
-
-#app-logo {
-    width: 100px;
-    height: 100px;
-    display: block;
-    margin: 0 auto 16px auto;
-
-    padding-top: 20px;
-    }
-
-#app-info {
-    color: white;
-    font: 10px Verdana;
-    display: block;
-    width: 100px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-
-
-
-.table-container {
-    display: table;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    }
-
-.table-cell {
-    display: table-cell;
-    vertical-align: middle;
-    }
-*/
