--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -35,11 +35,12 @@
     width: 360px;
     }
 
-#boom-movie-detail-poster {
+#boom-movie-detail-top {
     margin: 30px 0 0 30px;
+    height: 720px;
     }
 
-#boom-movie-detail-poster img {
+#boom-movie-detail-top img {
     display: block;
     min-width: 300px; max-width: 300px;
     min-height: 450px; max-height: 450px;
@@ -49,7 +50,23 @@
     /* box-shadow: inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3); */
     }
 
+#boom-movie-detail-bottom {
+    margin: 0 0 30px 30px;
+    height: 320px;
+    padding-top: 224px;
+    }
 
+.boom-detail-info {
+    color: white;
+
+    /* margin: 30px 0 0 0; */
+    width: 300px;
+    height: 45px;
+
+    font-size: 26px;
+    /* line-height: 30px; */
+    letter-spacing: 1px;
+    }
 
 #boom-movie-detail-right {
     z-index: 1000;
@@ -67,7 +84,9 @@
     -webkit-transform: rotate(90deg);
     width: 1080px;
     padding-left: 30px;
+    padding-right: 30px;
     background-color: black;
+    overflow: hidden;
     }
     /* -webkit-text-stroke: 0.75px rgba(0, 0, 0, 0.25); */
 
