--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -18,7 +18,8 @@ body {
     margin: 0; padding: 0;
     overflow: hidden;
     font-family: 'Ka Boom', sans-serif;
-    width: 100%; height: 100%;
+    /* width: 100%; height: 100%; */
+    width: 1920px; height: 1080px;
     }
 
 #content {
