--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -31,3 +31,14 @@ body {
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
     }
+
+
+#boom-movie-config {
+    display: block;
+
+    width: 750px; height: 1080px;
+
+    position: absolute; top: 0; left: -780px;
+
+    padding-left: 30px;
+    }
