--- a/frontend/app/css/grid.css
+++ b/frontend/app/css/grid.css
@@ -97,9 +97,13 @@
     text-align: center;
     display: inline-block;
     margin: 30px 0;
-    vertical-align: top; /* TODO: correct? */
+    vertical-align: top;
 
-    background-color: black;
+    /* background-color: black; */
+    }
+
+.boom-movie-grid-item.boom-large {
+    width: 360px; height: 450px;
     }
 
 .boom-movie-grid-item img {
@@ -109,6 +113,11 @@
     width: auto;
     height: auto;
     margin: 0 auto;
+    }
+
+.boom-movie-grid-item.boom-large img {
+    max-width: 300px;
+    max-height: 450px;
     }
 
 .boom-movie-grid-item img.desaturate {
@@ -146,6 +155,31 @@
     text-align: center;
     display: block;
 }
+
+/* ================================================================================================================== */
+
+#boom-boom-compilation-container {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute; left: 0; top: 0;
+    width: 1920px; height: 1080px;
+    padding-left: 45px;
+
+    -webkit-transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -webkit-transform-style: preserve-3d;
+    }
+
+#boom-boom-compilation-grid {
+    margin: 0 auto;
+
+    -webkit-transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -webkit-transform-style: preserve-3d;
+    }
 
 /* ================================================================================================================== */
 
