Fixed IDs of compilation elements.

--- a/frontend/app/css/grid.css
+++ b/frontend/app/css/grid.css
@@ -158,7 +158,7 @@
 
 /* ================================================================================================================== */
 
-#boom-boom-compilation-container {
+#boom-compilation-container {
     display: none;
     flex-direction: column;
     justify-content: center;
@@ -171,7 +171,7 @@
     -webkit-transform-style: preserve-3d;
     }
 
-#boom-boom-compilation-grid {
+#boom-compilation-grid {
     margin: 0 auto;
 
     -webkit-transform: translateZ(0);
@@ -196,7 +196,35 @@
 .boom-movie-grid-info-overlay-image {
     -webkit-transition: all 0.35s ease-in-out;
     -webkit-transform: scale(1);
+
+    /* position: relative; */
     }
+
+/*
+.boom-movie-grid-info-overlay-image:before, .boom-movie-grid-info-overlay-image:after {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    right: 30px;
+    content: "";
+    }
+
+.boom-movie-grid-info-overlay-image:before {
+    border-top: solid 20px transparent;
+    border-right: solid 20px black;
+    border-bottom: solid 20px black;
+    border-left: solid 20px transparent;
+    }
+
+.boom-movie-grid-info-overlay-image:after {
+    border-top: solid 20px #a0a0a0;
+    border-right: solid 20px transparent;
+    border-bottom: solid 20px transparent;
+    border-left: solid 20px #a0a0a0;
+
+    -webkit-box-shadow: -3px 1px 3px rgba(50, 50, 50, 0.75);
+    }
+*/
 
 .boom-movie-grid-info-overlay-title {
     color: white;
