Implemented proper movie info overlays in compilation mode.

--- a/frontend/app/css/grid.css
+++ b/frontend/app/css/grid.css
@@ -246,8 +246,14 @@
     width: 200px;
     margin: 130px 10px 0 30px;
 
-    -webkit-transform: translateY(-100%);
+    -webkit-transform: translate3d(0, -100%, 0);
     -webkit-transition: all 0.35s ease-in-out;
+    }
+
+.boom-large .boom-movie-grid-info-overlay-title {
+    font-size: 20px;
+    width: 300px;
+    margin-top: 215px;
     }
 
 .boom-movie-grid-info-overlay-text {
@@ -259,6 +265,7 @@
     text-align: center;
     background: rgba(0, 0, 0, 0.5);
 
+    -webkit-transform: translate3d(0, 0, 0);
     -webkit-transition: all 0.35s ease-in-out;
     -webkit-backface-visibility: hidden;
     }
@@ -280,10 +287,20 @@
 
     position: relative;
 
-    -webkit-transform: translateY(-100%);
+    -webkit-transform: translate3d(0, -100%, 0);
     -webkit-transition: all 0.35s 0.1s linear;
     }
 
-.active .boom-movie-grid-info-overlay-title, .active .boom-movie-grid-info-overlay-text-additional {
-    -webkit-transform: translateY(0);
+.boom-large .boom-movie-grid-info-overlay-text-additional {
+    font-size: 20px;
+    line-height: 32px;
+    margin-top: 32px;
     }
+
+.active .boom-movie-grid-info-overlay-title, .active .boom-movie-grid-info-overlay-text-additional {
+    -webkit-transform: translate3d(0, 0, 0);
+    }
+
+/* .boom-zoomed .active .boom-movie-grid-info-overlay-title, .boom-zoomed .active .boom-movie-grid-info-overlay-text-additional {
+    display: none;
+    } */
