Try to force GPU-acceleration.

--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -15,7 +15,11 @@
     background-size: cover;
     background-position-x: 160px;
     background-repeat: no-repeat;
-    /* padding: 30px; */
+
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -webkit-transform-style: preserve-3d;
     }
 
 #boom-movie-detail-shade {
