--- a/frontend/app/css/grid.css
+++ b/frontend/app/css/grid.css
@@ -14,7 +14,7 @@
 
     position: absolute; top: 0; left: 0;
 
-    -webkit-transform: translateZ(0);
+    -webkit-transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
     -webkit-transform-style: preserve-3d;
