--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -23,7 +23,6 @@
     }
 
 #boom-movie-detail-shade {
-    /* display: none; */
     width: 1520px; height: 1080px;
     background-color: black; opacity: 0;
     margin: 0 0 0 360px;
@@ -98,7 +97,7 @@
 #boom-movie-detail-description {
     display: none;
 
-    position: absolute; left: 360px; top: 0px;
+    position: absolute; left: 360px; top: 0;
 
     font-size: 40px;
     line-height: 60px;
