Minor GPU-acceleration fixes.

--- a/frontend/app/css/grid.css
+++ b/frontend/app/css/grid.css
@@ -174,7 +174,7 @@
     position: absolute; left: 0; top: 0;
     height: 1080px;
 
-    -webkit-transform: translateZ(0);
+    -webkit-transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
     -webkit-transform-style: preserve-3d;
@@ -183,7 +183,7 @@
 #boom-compilation-grid {
     margin: 0 auto;
 
-    -webkit-transform: translateZ(0);
+    -webkit-transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
     -webkit-transform-style: preserve-3d;
