--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -18,7 +18,6 @@ body {
     margin: 0; padding: 0;
     overflow: hidden;
     font-family: 'Ka Boom', sans-serif;
-    /* width: 100%; height: 100%; */
     width: 1920px; height: 1080px;
     }
 
@@ -27,9 +26,10 @@ body {
 
     background-color: black;
 
-    -webkit-transform: translateZ(0);
+    -webkit-transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
+    -webkit-transform-style: preserve-3d;
     }
 
 
