Hide grid in compilation mode when backdrop is not yet loaded.

--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -15,6 +15,7 @@
     background-size: cover;
     background-position-x: 160px;
     background-repeat: no-repeat;
+    background-color: black;
 
     -webkit-transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
