--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -13,7 +13,7 @@
     position: absolute; top: 0; left: 1920px;
 
     background-size: cover;
-    background-position-x: 160px;
+    background-position-x: -20px;
     background-repeat: no-repeat;
     background-color: black;
 
@@ -21,6 +21,36 @@
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
     -webkit-transform-style: preserve-3d;
+    }
+
+#boom-movie-detail-head {
+    display: none;
+
+    width: 2080px; height: 245px;
+    position: absolute; top: -245px; left: -160px;
+    background-color: black;
+    }
+
+#boom-movie-detail-poster-browser {
+    display: inline-block;
+    height: 245px;
+    }
+
+#boom-movie-detail-poster-browser img {
+    margin: 10px 0 0 10px;
+    }
+
+#boom-movie-detail-browser-info {
+    display: inline-block;
+    width: 1110px; height: 235px;
+    padding-left: 10px;
+    }
+
+#boom-movie-detail-browser-focus {
+    display: block;
+    position: absolute; top: -242px; left: 3px;
+    width: 156px; height: 231px;
+    border: 4px solid white;
     }
 
 #boom-movie-detail-shade {
@@ -34,7 +64,7 @@
     z-index: 1000;
     position: absolute;
 
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.5);
     height: 1080px;
     width: 360px;
     }
