--- a/frontend/app/css/buttons.css
+++ b/frontend/app/css/buttons.css
@@ -7,12 +7,13 @@
 
 .boom-button {
     color: rgb(128, 128, 128);
+    /* color: white; */
     /* background: rgba(0, 0, 0, 0.25); */
 
     margin: 30px 0 0 -2px;
     width: 300px;
     height: 45px;
-    border: 1px solid rgba(0, 0, 0, 0.5);
+    border: 1px solid transparent;
     border-radius: 2px;
 
     text-align: center;
@@ -25,11 +26,14 @@
     color: white;
 
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
+
     }
 
 .boom-button.boom-active {
     /* position: absolute; top: 510px; left: 28px;
     width: 302px; height: 45px; */
+
+    border: 1px solid rgba(0, 0, 0, 0.5);
 
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
 
