--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -12,8 +12,8 @@
 
     position: absolute; top: 0; left: 1920px;
 
-    background-size: cover;
-    background-position-x: -20px;
+    background-size: 1920px 1080px;
+    /* background-position-x: -20px; */
     background-repeat: no-repeat;
     background-color: black;
 
@@ -27,8 +27,13 @@
     display: none;
 
     width: 2080px; height: 245px;
-    position: absolute; top: -245px; left: -160px;
-    background-color: black;
+    position: absolute; top: 1080px; left: -160px;
+    background-color: rgba(0, 0, 0, 0.25);
+
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -webkit-transform-style: preserve-3d;
     }
 
 #boom-movie-detail-poster-browser {
@@ -42,13 +47,49 @@
 
 #boom-movie-detail-browser-info {
     display: inline-block;
-    width: 1110px; height: 235px;
-    padding-left: 10px;
+    width: 1090px; height: 225px;
+    float: right;
+    padding-top: 20px;
+    /* background-color: rgba(0, 0, 0, 0.5); */
+    }
+
+#boom-movie-detail-browser-title {
+    display: inline-block;
+    line-height: 50px;
+    font-size: 40px;
+
+    width: 1060px;
+
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
+    }
+
+#boom-movie-detail-browser-collection {
+    display: inline-block;
+    font-size: 25px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
+    padding-top: 10px;
+    }
+
+#boom-movie-detail-browser-additional {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    position: absolute;
+    bottom: 30px;
+
+    font-size: 30px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
+    }
+
+#boom-movie-detail-browser-additional li {
+    display: inline-block;
+    margin-right: 30px;
     }
 
 #boom-movie-detail-browser-focus {
     display: block;
-    position: absolute; top: -242px; left: 3px;
+    position: absolute; top: 1083px; left: 3px;
     width: 156px; height: 231px;
     border: 4px solid white;
     }
@@ -162,4 +203,11 @@
     text-align: center;
     font-size: 32px; font-style: italic;
     background-color: black;
+    }
+
+#boom-movie-detail-poster-fade-in {
+    width: 1920; height: 1080px;
+    position: absolute; left: 0; top: 0;
+    display: none;
+    -webkit-transform: translate3d(0, 0, 0);
     }
