--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -122,6 +122,11 @@
     width: auto;
     height: auto;
 
+    /* -webkit-filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.5)); */
+    /* -webkit-box-shadow: 0px 5px 25px 10px rgba(0, 0, 0, 0.5); */
+    -webkit-box-shadow: 0px 2px 30px 4px rgba(0, 0, 0, 0.5);
+    -webkit-transform: translate3d(0, 0, 0);
+
     /* box-shadow: inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3); */
     }
 
