--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -26,10 +26,10 @@ body {
 
     background-color: black;
 
-    -webkit-transform: translate3d(0, 0, 0);
+    /* -webkit-transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
-    -webkit-transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d; */
     }
 
 
