--- a/frontend/app/css/configure.css
+++ b/frontend/app/css/configure.css
@@ -6,9 +6,9 @@
  */
 
 #boom-panel {
-    -webkit-transform: translateZ(0);
+    /* -webkit-transform: translateZ(0);
     -webkit-backface-visibility: hidden;
-    -webkit-perspective: 1000;
+    -webkit-perspective: 1000; */
 
     margin-top: 130px;
     opacity: 0;
