--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -17,10 +17,10 @@
     background-repeat: no-repeat;
     background-color: black;
 
-    -webkit-transform: translate3d(0, 0, 0);
+    /* -webkit-transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
-    -webkit-transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d; */
     }
 
 #boom-movie-detail-head {
@@ -30,10 +30,10 @@
     position: absolute; top: 1080px; left: -160px;
     /* background-color: rgba(0, 0, 0, 0.25); */
 
-    -webkit-transform: translate3d(0, 0, 0);
+    /* -webkit-transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
-    -webkit-transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d; */
     }
 
 #boom-movie-detail-poster-browser {
@@ -129,7 +129,7 @@
     /* -webkit-filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.5)); */
     /* -webkit-box-shadow: 0px 5px 25px 10px rgba(0, 0, 0, 0.5); */
     -webkit-box-shadow: 0px 2px 30px 4px rgba(0, 0, 0, 0.5);
-    -webkit-transform: translate3d(0, 0, 0);
+    /* -webkit-transform: translate3d(0, 0, 0); */
 
     /* box-shadow: inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3); */
     }
@@ -215,8 +215,9 @@
     }
 
 #boom-movie-detail-poster-fade-in {
-    width: 1920; height: 1080px;
+    width: 1920px; height: 1080px;
     position: absolute; left: 0; top: 0;
     display: none;
-    -webkit-transform: translate3d(0, 0, 0);
+
+    /* -webkit-transform: translate3d(0, 0, 0); */
     }
